refactore image optimization code

--- a/public/app/partials/login.html
+++ b/public/app/partials/login.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-sm-6 col-md-4 col-md-push-4 col-sm-push-3">
+	<div class="col-sm-6 col-md-4 col-md-push-4 col-sm-push-3 col-xs-10 col-xs-push-1">
 		<form  ng-submit="submitLogin()" class="account-form" name="loginForm">
 			<div class="whitebox pad20">
 				<h2 class="text-center m0 m20">Login</h2>
