--- a/public/assets/stylesheets/styles.css
+++ b/public/assets/stylesheets/styles.css
@@ -335,10 +335,13 @@ table {
 }
 .removeImage {
 	position: absolute;
-	top: 5px;
-	right: 5px;
+	top: 0px;
+	right: 0px;
 	display: none;
 	z-index: 20;
+	background: url(/assets/images/remove.png) 50% no-repeat;
+	width: 100%;
+	height: 100%;
 }
 .productImage.hasImage:hover .removeImage {
 	display: block;
