--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,6 +16,7 @@ html(ng-app='starterApp')
         script(src='/app/app.js')
         script(src='/app/config/config.js')
         script(src='/app/services/authService.js')
+        script(src='/app/services/categoryService.js')
         script(src='/app/services/productService.js')
         script(src='/app/services/settingService.js')
         script(src='/app/controllers/mainController.js')
