--- a/public/app/partials/products/add.html
+++ b/public/app/partials/products/add.html
@@ -21,8 +21,8 @@
 										<input type="number" class="form-control input-sm" ng-model="productPrice" required />
 									</p>
 									<p>
-										<label>Product Tags</label>
-										<input type="text" class="form-control input-sm" />
+										<label>Product Tags</label> 
+										<tags-input ng-model="productTags"></tags-input>
 									</p>
 									<p>
 										<label>Product Category</label>
