--- a/public/app/partials/products/edit.html
+++ b/public/app/partials/products/edit.html
@@ -22,7 +22,7 @@
 									</p>
 									<p>
 										<label>Product Tags</label>
-										<input type="text" class="form-control input-sm" />
+										<tags-input ng-model="productTags"></tags-input>
 									</p>
 									<p>
 										<label>Product Category</label>
