--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html(ng-app='starterApp')
         base(href='/')
         link(rel='stylesheet', href='/assets/stylesheets/bootstrap.css')
         link(rel='stylesheet', href='/assets/stylesheets/animate.min.css')
+        link(rel='stylesheet', href='/assets/stylesheets/ng-tags-input.css')
         link(rel='stylesheet', href='/assets/stylesheets/styles.css')
         link(rel='stylesheet', href='/assets/stylesheets/misc.css')
         script(src='/assets/javascript/lodash.js')
@@ -13,6 +14,7 @@ html(ng-app='starterApp')
         script(src='/assets/javascript/angular-route.js')
         script(src='/assets/javascript/angular-resource.js')
         script(src='/assets/javascript/angular-animate.js')
+        script(src='/assets/javascript/ng-tags-input.min.js')
         script(src='/app/app.js')
         script(src='/app/config/config.js')
         script(src='/app/services/authService.js')
