--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,15 +6,19 @@ html(ng-app='starterApp')
         link(rel='stylesheet', href='/assets/stylesheets/bootstrap.css')
         link(rel='stylesheet', href='/assets/stylesheets/animate.min.css')
         link(rel='stylesheet', href='/assets/stylesheets/ng-tags-input.css')
+        link(rel='stylesheet', href='/assets/stylesheets/chosen.css')
         link(rel='stylesheet', href='/assets/stylesheets/styles.css')
         link(rel='stylesheet', href='/assets/stylesheets/misc.css')
         script(src='/assets/javascript/lodash.js')
+        script(src='/assets/javascript/jquery-1.12.3.min.js')
+        script(src='/assets/javascript/chosen.jquery.min.js')
         script(src='/assets/javascript/angular.min.js')
         script(src='/assets/javascript/angular-cookies.js')
         script(src='/assets/javascript/angular-route.js')
         script(src='/assets/javascript/angular-resource.js')
         script(src='/assets/javascript/angular-animate.js')
         script(src='/assets/javascript/ng-tags-input.min.js')
+        script(src='/assets/javascript/angular-chosen.min.js')
         script(src='/app/app.js')
         script(src='/app/config/config.js')
         script(src='/app/services/authService.js')
