--- a/public/app/partials/products/edit.html
+++ b/public/app/partials/products/edit.html
@@ -38,6 +38,19 @@
 											<option ng-repeat="subCat in subCategories" value="{{subCat}}">{{subCat}}</option>
 										</select>
 									</p>
+									<p>
+										<label>Related Products</label>
+										<select 
+											class="form-control input-sm" 
+											chosen 
+											multiple 
+											ng-model="productRelated" 
+											data-placeholder="Select a product" 
+											max-selected-options="3" 
+											search-contains="true"
+											ng-option="rel.name for rel in relatedProducts">  
+										</select>
+									</p>
 								</div>
 							</div>
 							<div class="form-card hide">
