--- a/public/app/partials/products/edit.html
+++ b/public/app/partials/products/edit.html
@@ -48,7 +48,7 @@
 											data-placeholder="Select a product" 
 											max-selected-options="3" 
 											search-contains="true"
-											ng-option="rel.name for rel in relatedProducts">  
+											ng-options="rel._id as rel.name for rel in relatedProducts">  
 										</select>
 									</p>
 								</div>
