--- a/public/app/partials/home.html
+++ b/public/app/partials/home.html
@@ -4,7 +4,7 @@
 			<tr>
 				<td align="right" valign="middle">
 					<h1 id="logo">
-						<span class="white-text">on</span>M<span class="white-text">arket</span></h1>
+						<span class="white-text">seven</span>E<span class="white-text">leven</span></h1>
 					<p id="tagline">Create your FREE online STORE!</p>
 				</td>
 				<td valign="middle">
