--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html(ng-app='starterApp')
     head
-        title= title
+        title 7 Eleven
         base(href='/')
         link(rel='stylesheet', href='/assets/stylesheets/bootstrap.css')
         link(rel='stylesheet', href='/assets/stylesheets/animate.min.css')
