--- a/views/themes/default/index.jade
+++ b/views/themes/default/index.jade
@@ -9,10 +9,21 @@ block content
             a(href='/#{objUser.store.url}/#{objProduct.url}')
               span.product-box-img
                 -var strProdImg = objProduct.images[0]['img1'] || objProduct.images[0]['img2'] || objProduct.images[0]['img3'] || objProduct.images[0]['img4'] || 'none.jpg';
-                img(src='/uploads/#{objUser._id}/products/#{strProdImg}')
+                img(src='/uploads/#{objUser._id}/products/sm/#{strProdImg}')
                 span.product-box-shadow
               span.product-box-meta.clearfix.show
-                span.pull-right.pad0.text-right.product-price-wrap
-                  | PHP
-                  span.product-price #{objProduct.price}
+                -if(objProduct.sale.off > 0){
+                  span.pull-right.pad0.text-right.product-price-wrap.product-price-sale
+                    | PHP
+                    span.product-price #{objProduct.price - (objProduct.price * (objProduct.sale.off/100))}
+                  span.pull-right.pad0.text-right.product-price-wrap.product-price-orig.mr5
+                    | PHP
+                    span.product-price #{objProduct.price}
+                  span.pull-right.pad0.text-right.product-price-wrap.text-danger.mr5
+                    | #{objProduct.sale.off} % off
+                -}else{
+                  span.pull-right.pad0.text-right.product-price-wrap
+                    | PHP
+                    span.product-price #{objProduct.price}
+                -}
                 span.pad0 #{objProduct.name}
