--- a/views/themes/default/product.jade
+++ b/views/themes/default/product.jade
@@ -27,7 +27,7 @@ block content
               img.img-ful(src="/uploads/none.jpg")
             -}
           h1.product-page-title.mb20 #{objProduct.name} 
-          .product-page-description.mb20 #{objProduct.desc}
+          .product-page-description.mb20 !{objProduct.desc}
         .product-page.mb20
           h3.product-page-title.m0.mb20 Product Reviews
           p No feedbacks yet.
