--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,8 @@ html(ng-app='starterApp')
         link(rel='stylesheet', href='/assets/stylesheets/animate.min.css')
         link(rel='stylesheet', href='/assets/stylesheets/ng-tags-input.css')
         link(rel='stylesheet', href='/assets/stylesheets/chosen.css')
+        link(rel='stylesheet', href='/assets/stylesheets/textAngular.css')
+        link(rel='stylesheet', href='/assets/stylesheets/font-awesome.min.css')
         link(rel='stylesheet', href='/assets/stylesheets/styles.css')
         link(rel='stylesheet', href='/assets/stylesheets/misc.css')
         script(src='/assets/javascript/lodash.js')
@@ -19,6 +21,9 @@ html(ng-app='starterApp')
         script(src='/assets/javascript/angular-animate.js')
         script(src='/assets/javascript/ng-tags-input.min.js')
         script(src='/assets/javascript/angular-chosen.min.js')
+        script(src='/assets/javascript/textAngular-rangy.min.js')
+        script(src='/assets/javascript/textAngular-sanitize.min.js')
+        script(src='/assets/javascript/textAngular.min.js')
         script(src='/app/app.js')
         script(src='/app/config/config.js')
         script(src='/app/services/authService.js')
