--- a/public/app/partials/products/add.html
+++ b/public/app/partials/products/add.html
@@ -12,10 +12,17 @@
 										<label>Product Name</label>
 										<input type="text" class="form-control input-sm" ng-model="productName" required />
 									</p>
-									<p>
+									<div class="mb10">
 										<label>Product Description</label>
-										<textarea ng-model="productDescription" class="form-control" required ></textarea>
-									</p>
+										<!--textarea ng-model="productDescription" class="form-control" required ></textarea-->
+										<div text-angular 
+											ng-model="productDescription" 
+											ta-toolbar="[['h1','h2','p'],['bold','italics','ul'],['justifyLeft', 'justifyCenter', 'justifyRight'],['insertImage','insertLink', 'insertVideo']]"
+											ta-toolbar-class="btn-toolbar btn-toolbar-ta" 
+											ta-toolbar-group-class="btn-group btn-group-xs"
+											ta-toolbar-active-button-class="active btn-primary"
+										></div>
+									</div>
 									<p>
 										<label>Product Price</label>
 										<input type="number" class="form-control input-sm" ng-model="productPrice" required />
