--- a/public/assets/stylesheets/styles.css
+++ b/public/assets/stylesheets/styles.css
@@ -581,9 +581,11 @@ table {
 /* text angular */
 .btn-toolbar.btn-toolbar-ta {
 	padding: 5px;
-    background: #ddd;
+    background: #eee;
     margin: 0;
     border-radius: 4px 4px 0 0;
+    border: 1px solid #ccc;
+    border-bottom: none;
 }
 .ta-scroll-window {
 	border-radius: 0 0 4px 4px;
