store page template

--- a/public/app/partials/my/profile.html
+++ b/public/app/partials/my/profile.html
@@ -1,7 +1,7 @@
 <div class="page-wrap">
 	<div class="page-body"> 	
 		<div class="row">
-			<div class="col-md-12"> 
+			<div class="col-md-6 col-md-push-3"> 
 				<form name="profileForm" ng-submit="submitProfile()">
 					<div class="form-card">
 						<h2 class="form-card-title">Profile</h2>
