--- a/public/app/partials/stores/view.html
+++ b/public/app/partials/stores/view.html
@@ -1,5 +1,183 @@
 <div class="page-wrap">
 	<div class="page-body">
-		ss
+		<div class="row">
+			<div class="col-md-12">
+				<div class="profileBox">
+					<img src="/assets/images/avatar.jpg" alt="" class="profileBox-avatar">
+					<div class="profileBox-details">
+						<h3>CoolStore</h3>
+						<h5>@coolstore</h5>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid beatae aliquam, iusto nisi sequi labore architecto repudiandae officiis, suscipit corporis laboriosam voluptatibus minima quos. Ad aperiam quidem, fugiat. Aliquam, optio?</p>
+						<ul class="profileBox-meta">
+							<li>Products : 57</li>
+							<li>Reviews : 57</li>
+							<li>Followers : 570</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row"> 
+				<div class="col-md-3 col-sm-4">
+					<div class="product-card product-card-cool product-card-cool-sm"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/4.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-3 col-sm-4">
+					<div class="product-card product-card-cool product-card-cool-sm"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/5.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-3 col-sm-4">
+					<div class="product-card product-card-cool product-card-cool-sm"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/6.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-3 col-sm-4">
+					<div class="product-card product-card-cool product-card-cool-sm"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/7.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div>  
+				<div class="col-md-3 col-sm-4">
+					<div class="product-card product-card-cool product-card-cool-sm"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/5.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-3 col-sm-4">
+					<div class="product-card product-card-cool product-card-cool-sm"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/6.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-3 col-sm-4">
+					<div class="product-card product-card-cool product-card-cool-sm"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/7.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-3 col-sm-4">
+					<div class="product-card product-card-cool product-card-cool-sm"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/8.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+			</div>
 	</div>
 </div>
