--- a/public/app/partials/products/index.html
+++ b/public/app/partials/products/index.html
@@ -13,7 +13,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-3 col-sm-4 col-xs-6" ng-repeat="product in arrProducts">
+						<div class="col-lg-3 col-sm-4 col-xs-6" ng-repeat="product in arrProducts">
 							<div class="product-card">
 								<a href="/manage/products/{{product._id}}/edit">
 									<img ng-src="/uploads/{{rs_me._id}}/products/sm/{{product.images[0].img1 || product.images[0].img2 || product.images[0].img3 || product.images[0].img4 || 'none.jpg'}}">
