--- a/public/assets/stylesheets/styles.css
+++ b/public/assets/stylesheets/styles.css
@@ -155,9 +155,13 @@ table {
 .product-card .product-meta {
 	display: block;
 	padding: 20px;
+	width: 100%;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 .product-card .product-price {
-	font-size: 14px;
+	font-size: 14px; 
 	font-weight: bold;
 	float: right;
 	margin-left: 20px;
@@ -572,6 +576,54 @@ table {
 	background-color: #fff;
 	padding: 20px;
 	margin-bottom: 20px;
+}
+
+/* profile */
+.profileBox {
+	margin: 0px 0 40px;
+    position: relative;
+    background: #fff;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.2);
+    padding: 20px 20px 20px 190px;
+    min-height: 150px;
+}
+.profileBox-avatar {
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
+.profileBox-details {
+
+}
+.profileBox h3 {
+    margin: 0;
+    font-size: 30px;
+    line-height: 30px;
+    padding: 0;
+    font-weight: bold;
+    color: #333;
+}
+.profileBox h5 {
+    font-size: 15px;
+    line-height: 15px;
+    margin: 0 0 10px;  
+    text-shadow: 0 1px 1px rgba(255,255,255,0.5);
+}
+.profileBox p {
+
+}
+.profileBox-meta {
+	list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.profileBox-meta li {
+    display: inline-block;
+    margin-right: 30px;
+    font-weight: bold;
+    color: #337ab7;
 }
 
 .chosen-container {
